@@ -47,6 +47,7 @@ All (GUI):
 - Update included Scintilla to version 3.3.9 (Christian Walther).
 - Add support for loading old V1 BMP files to wxImage (Artur Wieczorek).
 - Improve auto sizing of wrapped cells in wxGrid (iwbnwif).
+- Fix handling of rectangular selections in wxStyledTextCtrl (roberto).
 
 wxGTK:
 
